Added MrMarsh Solution and changed package structure to support all problem sites

--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.personal</groupId>
-	<artifactId>networking-projects</artifactId>
+	<artifactId>practice-problem</artifactId>
 	<version>1.0.0.1-SNAPSHOT</version>
 
 	<dependencies>
