Committing InstrumentationAgent for sync

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,17 @@
 		       		<target>1.8</target>
 		        </configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifestEntries>
+							<Premain-Class>com.personal.InstrumentationAgent</Premain-Class>
+						</manifestEntries>
+					</archive>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
